server/vm-k8s/k8s/overlay/monitoring/prometheus/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prometheus
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  strategy: {}
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      volumes:
      - name: prometheus-data
        persistentVolumeClaim:
          claimName: prometheus
      - name: config
        configMap:
          name: prometheus
          items:
            - key: config.yml
              path: prometheus.yml
            - key: node_export_alerts
              path: node_exporter.yml
            - key: mysqld_export_alerts
              path: mysqld_exporter.yml
            - key: smartctl_exporter_alerts
              path: smartctl_exporter.yml
            - key: embedded_exporter_alerts
              path: embedded_exporter.yml
            - key: custom_alerts
              path: custom_alerts.yml
            - key: price_tracker_alerts
              path: price_tracker.yml
      - name: secrets
        secret:
          secretName: prometheus
      - name: grafanacloud
        secret:
          secretName: grafanacloud
      containers:
      - image: prom/prometheus:v2.55.1
        name: prometheus
        resources:
          requests:
            memory: 32Mi
          limits:
            memory: 256Mi
        args:
        - '--config.file=/etc/prometheus/prometheus.yml'
        - '--storage.tsdb.path=/prometheus'
        volumeMounts:
          - name: prometheus-data
            mountPath: /prometheus
          - name: config
            mountPath: /etc/prometheus/prometheus.yml
            subPath: "prometheus.yml"
          - name: config
            mountPath: /etc/prometheus/node_exporter.yml
            subPath: "node_exporter.yml"
          - name: config
            mountPath: /etc/prometheus/mysqld_exporter.yml
            subPath: "mysqld_exporter.yml"
          - name: config
            mountPath: /etc/prometheus/smartctl_exporter.yml
            subPath: "smartctl_exporter.yml"
          - name: config
            mountPath: /etc/prometheus/embedded_exporter.yml
            subPath: "embedded_exporter.yml"
          - name: config
            mountPath: /etc/prometheus/custom_alerts.yml
            subPath: "custom_alerts.yml"
          - name: config
            mountPath: /etc/prometheus/price_tracker.yml
            subPath: "price_tracker.yml"
          - name: secrets
            mountPath: /secrets
            readOnly: true
          - name: grafanacloud
            mountPath: /grafanacloud
            readOnly: true
        ports:
        - containerPort: 9090
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alertmanager
  name: alertmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager
  strategy: {}
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      volumes:
      - name: config
        configMap:
          name: prometheus
          items:
            - key: alertmanager.yml
              path: alertmanager.yml
      - name: secrets
        secret:
          secretName: alertmanager
      containers:
      - image: prom/alertmanager:v0.27.0
        name: alertmanager
        resources:
          requests:
            memory: 32Mi
          limits:
            memory: 256Mi
        volumeMounts:
          - name: config
            mountPath: /etc/alertmanager/alertmanager.yml
            subPath: "alertmanager.yml"
          - name: secrets
            mountPath: /secrets
            readOnly: true
        ports:
        - containerPort: 9093
status: {}
