server/vm-k8s/k8s/overlay/monitoring/prometheus/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  selector:
    app: prometheus
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9090
      protocol: TCP
