server/vm-k8s/k8s/overlay/monitoring/prometheus/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  entryPoints:
    - internal
  routes:
    - kind: Rule
      match: Host(`prometheus.i.morawskim.pl`)
      services:
        - kind: Service
          name: prometheus
          port: 80
      middlewares:
        - name: openid-auth
        - name: add-x-forwarded-proto
